# rwz-pof

./: Cargo.toml  PLAN.md  README.md
core/: Cargo.toml
core/examples/: basic.rs
core/src/: engine.rs  lib.rs  types.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
host/: Cargo.toml  README.md
host/src/: main.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs  storage.rs  worker.rs
