[workspace]
resolver = "2"
members = ["core", "methods", "server"]

[workspace.dependencies]
risc0-zkvm = { version = "0.19.1" }
k256 = { version = "0.13.1", features = ["ecdsa"] }
serde = { version = "1.0", features = ["derive"] }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
