[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.1.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
