[package]
name = "rwz-pof-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rwz-pof-core = { path = "../core" }
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# For basic storage
dashmap = "5.5"
