[package]
name = "rwz-pof-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rwz-pof-core = { path = "../core" }
risc0-zkvm = { version = "1.1.2" }
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }

# For basic storage
dashmap = "5.5"
