[package]
name = "rwz_pof_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std'] }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
serde = { version = "1.0", features = ["derive"] }
rand_core = "0.6"
bincode = "1.3"
